# Grape-Wine-Rating-Inference

./: .gitignore  README.md  Xwines.ipynb  Xwines.py  pyproject.toml
data/: README.md
docs/: project-status.md
docs/legacy/: README.md
docs/ppt-notion/: README.md  index.html  index.md  notion-page-recordmap.json  provenance.md
docs/slides/: README.md
scripts/: project_status.py
src/wine_rating_inference/: __init__.py  project_status.py  xwines_recovery.py
tests/: test_project_status.py  test_xwines_recovery.py
